test/conformance/chainsaw/reports/background/exception-with-podsecurity/exception.yaml
apiVersion: kyverno.io/v2
kind: PolicyException
metadata:
  name: pod-security-exception
spec:
  exceptions:
  - policyName: psa-1
    ruleNames:
    - restricted
  match:
    any:
    - resources:
        kinds:
        - Pod
  podSecurity:
    - controlName: Capabilities
      images:
          - public.ecr.aws/docker/library/nginx*
          - redis*
