test/conformance/chainsaw/reports/background/exception-with-podsecurity/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psa-1
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
spec:
  background: true
  rules:
  - name: restricted
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      failureAction: Enforce
      podSecurity:
        level: restricted
        version: latest
