test/conformance/chainsaw/reports/background/exception-with-podsecurity/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psa-1
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
