test/conformance/chainsaw/reports/background/exception-with-podsecurity/report-assert.yaml
apiVersion: wgpolicyk8s.io/v1beta1
kind: PolicyReport
metadata:
  namespace: default
  ownerReferences:
  - apiVersion: v1
    kind: Pod
    name: nginx
results:
- policy: psa-1
  properties:
    exceptions: pod-security-exception
  result: skip
  rule: restricted
  scored: true
  source: kyverno
scope:
  apiVersion: v1
  kind: Pod
  name: nginx
summary:
  error: 0
  fail: 0
  pass: 0
  skip: 1
  warn: 0
